2010-01-19  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        Some composited reflections incorrectly positioned
        https://bugs.webkit.org/show_bug.cgi?id=33856
        
        New testcases for reflection positioning when adding outline, which affects the compositing
        layer geometry.

        * compositing/reflections/nested-reflection-transformed2.html: Added.
        * compositing/reflections/reflection-positioning2.html: Added.
        * platform/mac/compositing/reflections/nested-reflection-transformed2-expected.checksum: Added.
        * platform/mac/compositing/reflections/nested-reflection-transformed2-expected.png: Added.
        * platform/mac/compositing/reflections/nested-reflection-transformed2-expected.txt: Added.
        * platform/mac/compositing/reflections/reflection-positioning2-expected.checksum: Added.
        * platform/mac/compositing/reflections/reflection-positioning2-expected.png: Added.
        * platform/mac/compositing/reflections/reflection-positioning2-expected.txt: Added.

2010-01-19  Enrica Casucci  <enrica@apple.com>

        Reviewed by Simon Fraser.

        REGRESSION: Infinite recursion in Position::getInlineBoxAndOffset()
        https://bugs.webkit.org/show_bug.cgi?id=33864
        <rdar://problem/7552959>

        * editing/selection/selection-applet-expected.txt: Added.
        * editing/selection/selection-applet.html: Added.

2010-01-15  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        LayoutTests/animations/play-state.html and LayoutTests/transitions/cancel-transition.html are still flaky
        https://bugs.webkit.org/show_bug.cgi?id=33748

        * animations/play-state-expected.txt:
        * animations/play-state.html:
        Undo my previous change of decreasing the length of the test. I think that made it more flaky.
        Also increase the tolerance.

        * transitions/cancel-transition.html: